# Cartographer

./: README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
agents/: AGENTS.md
commands/: audit.md  map.md
examples/stocksCorrelation/: README.md
scripts/: cartographer_cli.py  extract_openapi.py
skills/cartographer/: SKILL.md
skills/cartographer/prompts/: fix_agent.md  specialist_base.md
skills/cartographer/prompts/_archive/: segment_review.md
