[project]
name = "project-cartographer"
version = "0.8.0"
description = "Map, audit, and review large multi-segment codebases — a Claude Code skill with a deterministic Python pipeline behind it."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Roei Michael", email = "roeym111@gmail.com" }]
keywords = ["claude-code", "skill", "code-review", "static-analysis", "ast", "audit", "refactor", "monorepo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "pathspec>=0.11",
    "networkx>=3.0",
    "rapidfuzz>=3.0",
]

[project.urls]
Homepage = "https://github.com/roeimichael/project-cartographer"
Issues = "https://github.com/roeimichael/project-cartographer/issues"
Changelog = "https://github.com/roeimichael/project-cartographer/blob/main/CHANGELOG.md"

[project.scripts]
cartographer = "scripts.cartographer_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts", "agents", "prompts"]
include = ["SKILL.md", "run_pipeline.sh"]

[tool.hatch.build.targets.sdist]
include = [
    "scripts/",
    "agents/",
    "prompts/",
    "docs/",
    "examples/",
    "SKILL.md",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "run_pipeline.sh",
    "requirements.txt",
]

[tool.ruff]
src = ["scripts"]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
